--- a/collage.html
+++ b/collage.html
@@ -7,10 +7,10 @@
 </head>
 <body>
     <h1>Nature</h1>
-     <p> Nature is a<strong> wonderful gift that surrounds</strong> us with its incredible beauty.<br> From the tall, green trees to the </p><I> flowers that bloom in every season, nature fills</I> the world with life and joy.</p>
-    <abbr title="Best Friend">BF</abbr>
-    <abbr title="GROSS DOMESTIC PRODUCT">GDP</abbr>
-    <img src="ele\download.jpeg">
+     <p> Nature is a<strong> wonderful gift that surrounds</strong> us with its incredible beauty.<br> From the tall, green trees to the </p><I> flowers that bloom in every season, nature fills</I> the world with life and joy.</p><br>
+    <abbr title="Best Friend">BF</abbr><br>
+    <abbr title="GROSS DOMESTIC PRODUCT">GDP</abbr><br>
+    <img src="nature\nature.jpeg">
 
 
     </body>
